leave dist files out

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Disqus SDK</title>
 
-  <link rel="stylesheet" href="/style.css">
-  <script src="/dist/app.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="dist/app.js"></script>
 </head>
 <body>
   <h1>Disqus SDK</h1>
