save url for future using

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="zh-cn-Hans">
 <head>
   <meta charset="UTF-8">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
   <title>Disqus Proxy</title>
 
   <link rel="stylesheet" href="style.css">
