add recent comments

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <button id="search">确定</button>
   </section>
 
-  <section id="disqus-thread"></section>
+  <section id="disqus-recent-comments"></section>
+
+  <section id="disqus_thread"></section>
 
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
