--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>DisqusJS</title>
-  <script src="/req.js"></script>
+  <script src="//github.elemecdn.com/jiananshi/req/0.1.0/lib/req.js"></script>
   <script src="//npm.elemecdn.com/jinkela@1.2.18/umd.js"></script>
   <script src="/index.js"></script>
+  
 </head>
 <body>
+  <ul id="recent" style="list-style: none;"></ul>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      DisqusJS.init();
+      DisqusJS.getRecentComments(document.querySelector('#recent'));
+    }); 
+  </script>
 </body>
 </html>
