feat(rewrite some user interaction):

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <ul id="recent" style="list-style: none;"></ul>
   <div id="disqus_thread"></div>
+  <script src="/index.js"></script>
 </body>
 </html>
